--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <div class="row"><!--SecondRowForImages-->
             <div class="col-lg-4 work">
                     <img src="assets/images/technics-q-c-640-480-1.jpg" class="img-fluid" alt="hangman">
-                <h3><a href="file:///Users/jennifermartinez/Desktop/GHRepo/Psychic-Game/index.html">Hangman</a></h3>
+                <h3><a href="https://jennmartinez.github.io/Psychic-Game/">Hangman</a></h3>
             </div>
             
             <div class="col-lg-4 work">
