--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="navbar transparent navbar-inverse navbar-fixed-top">
                 <nav class="navbar-inner">
                     <a href="name">Jennifer Martinez</a>
+
                 
                     <ul class="navbar-nav ml-auto">
                         <li class="active"></li>
@@ -74,13 +75,10 @@
             </div>
         </div>
     </div>
-    
-    <footer>
-        <blockquote class="blockquote-footer text-center">
-            <div class="bg-secondary text-white p-4 mb-5 ml-5 mr-5">
-            &copy; Copyright 2018 Jennifer Martinez                
-            </div>            
-        </blockquote>       
+
+    <footer class="navbar transparent navbar-inverse navbar-fixed-bottom">
+        <nav class="navbar-inner">
+            <a href="copyright">&copy; Copyright 2018 Jennifer Martinez </a>
     </footer>
 </body>
 </html>
