--- a/portfolio.html
+++ b/portfolio.html
@@ -42,29 +42,29 @@
     
         <div class="row"><!--SecondRowForImages-->
             <div class="col-lg-4 work">
-                    <img src="assets/images/technics-q-c-640-480-1.jpg" width="200" height="200" class="img-fluid" alt="hangman">
+                    <img src="assets/images/technics-q-c-640-480-1.jpg" width="150" height="150" class="img-fluid" alt="hangman">
                 <h3><a href="https://jennmartinez.github.io/Psychic-Game/">Psychic Game</a></h3>
             </div>
             
             <div class="col-lg-4 work">
-                    <img src="assets/images/technics-q-c-640-480-2.jpg" width="200" height="200" class="img-fluid" alt="rpg game">
+                    <img src="assets/images/technics-q-c-640-480-2.jpg" width="150" height="150" class="img-fluid" alt="rpg game">
                 <h3><a href="https://jennmartinez.github.io/unit-4-game/">RPG Game</a></h3>
             </div>
 
             <div class="col-lg-4 work">
-                    <img src="assets/images/technics-q-c-640-480-5.jpg" width="200" height="200" class="img-fluid" alt="trivia game">
-                <h3>Trivia Game</h3>
+                    <img src="assets/images/technics-q-c-640-480-5.jpg" width="150" height="150" class="img-fluid" alt="trivia game">
+                <h3><a href="https://jennmartinez.github.io/Trivia_Game/">Trivia Game</a></h3>
             </div>
         </div><!--EndOfSecondRow-->
 
         <div class="row"><!--ThirdRow-->
             <div class="col-lg-4 work">
-                    <img src="assets/images/technics-q-c-640-480-7.jpg" width="200" height="200" class="img-fluid" alt="rutgers info widget">
-                <h3>Rutgers Info Widget</h3>
+                    <img src="assets/images/technics-q-c-640-480-7.jpg" width="150" height="150" class="img-fluid" alt="rutgers info widget">
+                <h3><a href="https://jennmartinez.github.io/Giphy/">Giphy</a></h3>
             </div>
 
             <div class="col-lg-4 work">
-                    <img src="assets/images/technics-q-c-640-480-9.jpg" width="200" height="200" class="img-fluid" alt="rock paper scissors">
+                    <img src="assets/images/technics-q-c-640-480-9.jpg" width="150" height="150" class="img-fluid" alt="rock paper scissors">
                 <h3>Rock Paper Scissors</h3>
             </div>
         </div><!--EndOfThirdRow-->
