--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 
             <div class="col-lg-4 work">
                     <img src="assets/images/technics-q-c-640-480-9.jpg" width="150" height="150" class="img-fluid" alt="rock paper scissors">
-                <h3>Rock Paper Scissors</h3>
+                <h3><a href=" https://jennmartinez.github.io/Firebase/">Space Scheduler</h3>
             </div>
         </div><!--EndOfThirdRow-->
     </div> <!--EndOfContainer-->  
